--- a/package.json
+++ b/package.json
@@ -12,24 +12,33 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@capacitor/action-sheet": "^6.0.2",
+    "@capacitor/android": "^6.1.2",
     "@capacitor/app": "6.0.1",
-    "@capacitor/core": "6.1.2",
+    "@capacitor/core": "^6.1.2",
+    "@capacitor/device": "^6.0.1",
     "@capacitor/haptics": "6.0.1",
+    "@capacitor/ios": "^6.1.2",
     "@capacitor/keyboard": "6.0.2",
-    "@capacitor/status-bar": "6.0.1",
+    "@capacitor/push-notifications": "^6.0.2",
+    "@capacitor/splash-screen": "^6.0.2",
+    "@capacitor/status-bar": "^6.0.1",
     "@ionic/react": "^8.0.0",
     "@ionic/react-router": "^8.3.2",
     "@ionic/storage": "^4.0.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "date-fns": "^4.1.0",
     "ionicons": "^7.0.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4"
   },
   "devDependencies": {
-    "@capacitor/cli": "6.1.2",
+    "@capacitor/assets": "^3.0.5",
+    "@capacitor/cli": "^6.1.2",
     "@testing-library/dom": ">=7.21.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
